# ChangeLog for dev-perl/PadWalker
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/PadWalker/ChangeLog,v 1.12 2007/04/14 13:59:26 mcummings Exp $

  14 Apr 2007; Michael Cummings <mcummings@gentoo.org> PadWalker-1.5.ebuild:
  Marking sparc stable

  09 Apr 2007; Michael Cummings <mcummings@gentoo.org> PadWalker-1.5.ebuild:
  Marking stable amd64

  08 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  -PadWalker-1.0.ebuild, -PadWalker-1.1.ebuild, PadWalker-1.2.ebuild:
  Marking sparc stable

  07 Jan 2007; Michael Cummings <mcummings@gentoo.org> PadWalker-1.0.ebuild,
  PadWalker-1.1.ebuild, PadWalker-1.2.ebuild:
  Marking amd64 stable

*PadWalker-1.5 (07 Jan 2007)

  07 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  -PadWalker-1.3.ebuild, +PadWalker-1.5.ebuild:
  Version bump

*PadWalker-1.3 (05 Jan 2007)

  05 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  +PadWalker-1.3.ebuild:
  Version bump

  24 Nov 2006; Michael Cummings <mcummings@gentoo.org> PadWalker-1.0.ebuild:
  sparc stable

  24 Nov 2006; Michael Cummings <mcummings@gentoo.org> PadWalker-1.0.ebuild:
  amd64 stable

*PadWalker-1.2 (19 Nov 2006)

  19 Nov 2006; Michael Cummings <mcummings@gentoo.org>
  +PadWalker-1.2.ebuild:
  Version bump

  10 Nov 2006; Christian Faulhammer <opfer@gentoo.org> PadWalker-1.1.ebuild:
  keyworded ~x86, bug #154611

*PadWalker-1.1 (06 Nov 2006)

  06 Nov 2006; Michael Cummings <mcummings@gentoo.org>
  +PadWalker-1.1.ebuild:
  Version bump

*PadWalker-1.0 (21 Oct 2006)

  21 Oct 2006; Michael Cummings <mcummings@gentoo.org> +metadata.xml,
  +PadWalker-1.0.ebuild:
  Optional dep for Test-Memory-Cycle
